<resources>
    <string name="app_name">Top10</string>
    <string name="top_free_apps">Top Free Apps</string>
    <string name="top_paid_apps">Top Paid Apps</string>
    <string name="top_songs">Top Songs</string>
    <string name="top_albums">Top Albums</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_favourite">Add to Favourites</string>
    <string name="action_play_next">Play Next</string>
    <string name="backdrop_title">LOVE MUSIC</string>
    <string name="backdrop_subtitle">This season top 20 albums</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_free_apps">Top Free Apps</string>
    <string name="nav_paid_apps">Top Paid Apps</string>
    <string name="nav_songs">Top Songs</string>
    <string name="nav_albums"> Top Albums</string>
    <string name="nav_notifications"> Notifications </string>
    <string name="nav_about_us">About Us</string>

    <!--Caption Titles-->
    <string name="app_caption">Play, Learn, Explore</string>
    <string name="music_caption">Experience the music</string>
    <string name="home_caption">Your personal collection</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Top Free Apps</item>
        <item>Top Paid Apps</item>
        <item>Top Songs</item>
        <item>Top Albums</item>
        <item>Sign Out</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open"> Open </string>
    <string name="close"> Close </string>

    <string name="search_hint">Search here...</string>


    <!--Slider screen texts -->
    <string name="app_home_name">IntroSliderDemo</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">Daily Workout</string>
    <string name="slide_1_desc">Set your daily workout routine by the help of trainer</string>
    <string name="slide_2_title">Meditation Techniques </string>
    <string name="slide_2_desc">Learn about the different meditation techniques and practice them</string>
    <string name="slide_3_title">Diet Chart</string>
    <string name="slide_3_desc">Make your diet chart by the help of health experts</string>
    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
</resources>
